bug fix z-index

--- a/src/app/components/continuar-assistindo/continuar-assistindo.component.scss
+++ b/src/app/components/continuar-assistindo/continuar-assistindo.component.scss
@@ -34,6 +34,7 @@
       &:hover{
         cursor: pointer;
         transform: scale(1.2);
+        z-index: 20;
       }
     }
   }
